syntax = "proto3";

package common_example;

import "github.com/kitt-technology/protoc-gen-graphql/graphql/graphql.proto";

option go_package = "github.com/kitt-technology/protoc-gen-graphql/example/common-example;common_example";
option (graphql.package) = "github.com/kitt-technology/protoc-gen-graphql/example/common-example;common_example";

message Money {
  option (graphql.skip_message) = true; // This is used because we have some custom Money gql types
  string currency_code = 1;
  int64 units = 2;
}

message Int32Range {
  int32 min = 1;
  int32 max = 2;
}

message MoneyRange {
  Money min = 1;
  Money max = 2;
}
